<resources>
    <string name="app_name">Расписание автобусов</string>

    <string name="work">Рабочий</string>


    <string name="btn136prig">136 Приг.</string>
    <string name="btn136kmr">136 КМР</string>
    <string name="btn157kmr">157 КМР</string>
    <string name="btn176">176</string>
    <string name="btn114">114</string>


    <string name="H1_136prig">Автобус 136 Пригородный - рабочий день</string>
    <string name="H1_136prigVih">Автобус 136 Пригородный - выходной день</string>
    <string name="H1_136kmr">Автобус 136 КМР - рабочий день</string>
    <string name="H1_136kmrVih">Автобус 136 КМР - выходной день</string>
    <string name="H1_157kmr">Автобус 157 КМР - рабочий день</string>
    <string name="H1_157kmrVih">Автобус 157 КМР - выходной день</string>
    <string name="H1_176">Автобус 176 ТЭЦ и Пригородный - рабочий день и суббота</string>
    <string name="H1_114">Автобус 114 - рабочий день</string>
    <string name="H1_114Vih">Автобус 114 - выходной день</string>


    <string name="TextTime157kmr"> 6:40 7:00 7:20 7:40 8:00 8:20 8:40 9:00 9:20 9:40 10:00
        10:20 10:40 11:00 11:20 11:40 12:00 12:20 12:40 13:00 13:20 13:40 14:00 14:20
        14:40 15:00 15:20 15:40 16:00 16:20 16:40 17:00 17:20 17:40 18:00 18:20 18:40
        19:00 19:20 19:40 20:00 20:30 21:00 21:30</string>
    <string name="TextTime157kmrVih">6:40 7:00 7:20 7:40 8:00 8:20 8:40 9:00 9:25 10:00 10:25
        11:00 11:25 12:00 12:25 13:00 13:25 14:00 14:25 15:00 15:25 16:00 16:25 17:00 17:25
        18:00 18:25 19:00 19:30 20:00 20:30 21:00 21:30</string>
    <string name="TextTime136prig">5:50 6:00 6:20 6:30 7:00 7:08 7:25 7:45 8:10 8:30 8:50 9:10 9:30 9:50
        10:10 10:30 10:50 11:10 11:30 11:50 12:10 12:30 12:50 13:10 13:30 13:50
        14:10 14:30 14:50 15:10 15:30 15:50 16:10 16:30 16:50 17:10 17:30 17:50
        18:10 18:30 18:50 19:10 19:30 19:50 20:10 20:30</string>
    <string name="TextTime136prigVih">6:00 6:30 7:00 7:25 7:45 8:05 8:25 8:45 9:05 9:25 9:50
        10:10 10:25 10:50 11:10 11:25 11:50 12:10 12:25 12:50 13:25 13:50
        14:10 14:25 14:50 15:10 15:25 15:50 16:10 16:25 16:50 17:10 17:25 17:50
        18:10 18:25 18:50 19:10 19:25 19:50 20:20</string>
    <string name="TextTime136kmr">6:15 6:30 6:50 7:10 7:30 7:50 8:10 8:30 8:50 9:10 9:30 9:50
        10:10 10:30 10:50 11:10 11:30 11:50 12:10 12:30 12:50 13:10 13:30 13:50
        14:10 14:30 14:50 15:10 15:30 15:50 16:10 16:30 16:50 17:10 17:30 17:50
        18:10 18:30 18:50 19:10 19:30 19:50 20:15 20:45</string>
    <string name="TextTime136kmrVih">6:30 6:50 7:10 7:30 7:50 8:10 8:30 8:50 9:15 9:35 9:50
        10:15 10:35 10:50 11:15 11:35 11:50 12:15 12:35 12:50 13:15 13:35 13:50
        14:15 14:35 14:50 15:15 15:35 15:50 16:15 16:35 16:50 17:15 17:35 17:50
        18:15 18:35 18:50 19:15 19:45  20:15 20:45</string>
    <string name="TextTime176">5:55 6:35 7:25 8:15 9:05 9:55 10:45 11:25 12:15 13:05 15:25
        16:15 17:05 17:55 18:45 19:35</string>
    <string name="TextTime114">6:15 6:35 6:55 7:12 7:30 7:50 8:10 8:30 8:50 9:10 9:30 9:50
        10:10 10:30 10:50 11:10 11:30 11:50 12:10 12:30 12:50 13:10 13:30 13:50 14:10 14:30
        14:50 15:10 15:30 15:50 16:10 16:30 16:50 17:10 17:30 17:45 18:00 18:15 18:30 18:45
        19:00 19:20 19:40 20:05 20:30</string>
    <string name="TextTime114Vih">6:35 6:55 7:12 7:30 7:50 8:10 8:30 8:50 9:10 9:30 9:50
        10:10 10:30 10:50 11:10 11:30 11:55 12:20 12:45 13:10 13:35 14:00 14:25 14:50
        15:10 15:30 15:50 16:10 16:30 16:50 17:10 17:30 17:50 18:10 18:30 18:50 19:15
        19:40 20:05 20:30</string>



</resources>
